style: format CSS properties for consistency and readability; fix color case in button styles

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -18,7 +18,6 @@
     --global-text-6: #ec5c52;
     --global-text-7: #c1c1c1;
 
-
     /* Dropdown Colors */
     --dropdown-bg-1: #121212;
     --dropdown-text-1: #c1c1c1;
@@ -26,8 +25,8 @@
     /* Button Colors */
     --button-bg-1: #0057b8;
     --button-text-1: #f8f8f8;
-    --button-bg-light: #D0E7FF;
-    --button-bg-light-hover: #B8DCFF;
+    --button-bg-light: #d0e7ff;
+    --button-bg-light-hover: #b8dcff;
     --button-text-dark: #002450;
   }
 }
